--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title:            Site Title
-description:      Describe your website here.
-disqus_shortname: 
+title:            ふせきのBlog
+description:      The blog of Fuseki.
+#disqus_shortname: The blog of Fuseki.
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url: https://yfuseki.github.io
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Yuta Fuseki
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          you@email.com
+  bio:            "開発者"
+  email:          yfuseki@fourmix.co.jp
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
@@ -35,15 +35,15 @@ google_verify:
 bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
-future:      false  # publish future dated posts --  true, false (default) 
+timezone:    Asia/Tokyo
+future:      true  # publish future dated posts --  true, false (default)
 highlighter: rouge
 markdown:    kramdown
 gems:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-gist
-  - jekyll-feed
+  # - jekyll-feed
 sass:
   sass_dir: _sass
   style: compressed
