--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # Menu navigation links
 
-- title: Theme Setup
-  url: /theme-setup/
+#- title: Theme Setup
+#  url: /theme-setup/
 
-- title: External Link
-  url: http://mademistakes.com
+#- title: External Link
+#  url: http://mademistakes.com
+
+- title: ふせき
+  url: https://google.com
