--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: https://yfuseki.github.io
+url: http://www.fuseki.cf
 
 # Owner/author information
 owner:
